MINOR: [Release] Update CHANGELOG.md for 16.1.0